--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:*\"",
+    "dev:client": "vite",
+    "dev:server:": "json-server db.json",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -14,9 +16,10 @@
     "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "concurrently": "^9.1.2",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0"
   },
