--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:9000",
   "scripts": {
     "dev": "concurrently \"npm run dev:*\"",
     "dev:client": "vite",
